add proof check
